overhead and profit table alignment fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -7187,6 +7187,9 @@ left: 17rem;
   border-bottom: none !important;
   border-top: none !important;
 }
+@page {
+  margin: 0mm 1mm 1mm 0mm;
+}
 
 @media print { 
   .remove-space-border {
